--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
              <div class="animado carddos" id="animado">
                  <img class="icono" src="icon/iconfiesta.svg" alt="fiesta">
                  <h2>Fiesta</h2>
-                 <p>No hay boda sin fiesta, te esperamos para bailar <br>el sabado 08 de octubre de 2022, 16:45Hs.<br> <br>Casona Pucara de Buena Vista</p>
+                 <p>No hay boda sin fiesta, te esperamos para bailar <br>el sabado 08 de octubre de 2022, 16:45Hs.<br>Casona Pucara de Buena Vista</p>
                  <br>
                  <a class="boton"target="_blank"  href="https://goo.gl/maps/wTikvXE1iNcuw5MDA">COMO LLEGAR</a>
                 </div>
